Fix spacing error with images in ImageListItem component

--- a/src/components/ImageListItem/styles.module.scss
+++ b/src/components/ImageListItem/styles.module.scss
@@ -71,6 +71,7 @@
     margin: 30px 0 0 0;
     text-align: center;
     img {
+      margin: 0 auto;
       border-radius: 5px;
       transform: translate(0, -30px);
       width: 90%;
@@ -78,11 +79,12 @@
   }
 
   .flipImage {
-    border-radius: 5;
+    border-radius: 5px;
     position: relative;
     margin: 30px 0 0 0;
     text-align: center;
     img {
+      margin: 0 auto;
       border-radius: 5px;
       transform: translate(0, -30px);
       width: 90%;
@@ -109,6 +111,10 @@
   .description {
     color: #939393;
     font-size: 18px;
+    &::-webkit-scrollbar {
+      width: 0;
+      background: transparent;
+    }
   }
 }
 
@@ -176,6 +182,8 @@
       order: 1;
       margin-right: 100px;
       height: 20vw;
+      padding: 0;
+      padding-left: 150px;
       img {
         width: 90%;
         height: 95%;
@@ -186,6 +194,8 @@
       order: 2;
       height: 20vw;
       margin-left: 100px;
+      padding: 0;
+      padding-right: 150px;
       img {
         width: 90%;
         height: 95%;
@@ -195,12 +205,14 @@
     .flipText {
       order: 1;
       width: 100%;
+      margin: auto 0;
       padding: 0 50px 0 100px;
     }
 
     .textContainer {
       order: 2;
       padding: 0 100px 0 50px;
+      margin: auto 0;
     }
 
     .description {
